# motologger_firmware

./: CMakeLists.txt  cubemx_cmake.yml  firmware.ioc
cmake/: cubemx.cmake
include/: ffconf.h  fs.hpp  hw.hpp  main.hpp  sd_diskio.h  stm32f4xx_hal_conf.h  utils.hpp
include/drivers/: lsm9ds1.hpp
include/motologger/: application.hpp  can_frame.hpp  moto.hpp  sample.hpp  session.hpp
include/motologger/moto/: yamaha_mt07.hpp
src/: bsp_driver_sd.c  fs.cpp  hw.cpp  hw_init.cpp  hw_io.cpp  hw_isr.cpp  main.cpp  syscalls.cpp
src/app/: application.cpp  session.cpp  utils.cpp
src/app/moto/: yamaha_mt07.cpp
src/drivers/: lsm9ds1.cpp
stm32cube/drivers/bsp/: stm32412g_discovery.c  stm32412g_discovery.h  stm32412g_discovery_sd.c  stm32412g_discovery_sd.h
stm32cube/drivers/cmsis/include/: cmsis_gcc.h  core_cm4.h  core_cmFunc.h  core_cmInstr.h  core_cmSimd.h  stm32f412zx.h  stm32f4xx.h  system_stm32f4xx.h
stm32cube/drivers/hal/include/: stm32f4xx_hal.h  stm32f4xx_hal_can.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_rtc.h  stm32f4xx_hal_rtc_ex.h  stm32f4xx_hal_sd.h  stm32f4xx_hal_sram.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_cortex.h  stm32f4xx_ll_dma.h  stm32f4xx_ll_fsmc.h  stm32f4xx_ll_gpio.h  stm32f4xx_ll_i2c.h  stm32f4xx_ll_pwr.h  stm32f4xx_ll_rcc.h  stm32f4xx_ll_rtc.h  stm32f4xx_ll_sdmmc.h  stm32f4xx_ll_tim.h
stm32cube/drivers/hal/src/: stm32f4xx_hal.c  stm32f4xx_hal_can.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  (+24 more)
tests/: CMakeLists.txt  fatfs_stubs.cpp  session_test.cpp  stubs.hpp  system_stubs.cpp  tests.hpp
(+12 files in other folders)
